== 0.1.5-SNAPSHOT (In Git)

Important! This release requires cucumber 0.3.102

Starting with this release we recommend you use gemcutter as the primary source for gems.
You can do this by using --source http://gemcutter.org/ in your Maven POM's <gem> elements,
or similar in Ant (assuming you copied and adapted one of the example Ant scripts).

So go ahead and update your POMs with <gem>cucumber --version 0.3.102 --source http://gemcutter.org/</gem>
and install it once with -Dcucumber.installGems=true

=== New Features
* New experimental Clojure support. (Aslak Hellesøy)

=== Changed Features
* Minimum Cucumber version is now 0.3.102. (Aslak Hellesøy)
* Regular expression matching in step definitions are now native to the used programming language. (Aslak Hellesøy)
* Groovy step definitions *must* use Regexps, not Strings. Just prepend a ~ to your regexp string. (Aslak Hellesøy)

== 0.1.4 2009-09-21

This release has several small backwards incompatible changes that should for the most part only affect your build scripts. 
If you're using Groovy you also have to change your step definitions to use strings instead of regexps.

Make sure you read the release notes carefully before upgrading!

=== New features
* Java snippets should now produce valid Java code (Aslak Hellesøy)
* Examples' Maven builds install aslakhellesoy-ansicolor (needed for the poor windows users) (Aslak Hellesøy)
* examples/webtest upgraded to celerity 0.0.7 and jetty 7.0.0.1beta3 (Aslak Hellesøy)
* Added -Dcucumber.extraArgs command line argument that lets us append extra cucumber arguments on the command line. E.g -Dcucmber.extraArgs="--color --tag @dev" (#14 Torbjørn Vatn)

=== Changed Features
* The Maven "feature" goal has been renamed to "cucumber" (Aslak Hellesøy)
* The Maven <gem> element has changed. You can now pass extra arguments, and there are no funny : delimiters. See examples. (#22 Aslak Hellesøy)