@@ -5,9 +5,8 @@ import org.jruby.RubyArray;
 import java.util.List;
 
 public interface StepDefinition {
+    String regexp_source();
     String file_colon_line();
-
     void invoke(RubyArray args) throws Throwable;
-
     List<Group> groups(String stepName);
 }
